Initial changes for v1.3.0