@@ -10,6 +10,7 @@ import net.minecraft.block.BlockState;
 import net.minecraft.entity.Entity;
 import net.minecraft.item.*;
 import net.minecraft.util.ActionResult;
+import net.minecraft.util.Pair;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
@@ -21,6 +22,8 @@ import java.util.stream.Collectors;
 
 @Mixin(BlockItem.class)
 public class BlockItemMixin extends Item {
+    @Unique
+    Pair<ModifyBlockPlacedPower, BlockState> pair;
 
     public BlockItemMixin(Settings settings) {
         super(settings);
@@ -33,41 +36,30 @@ public class BlockItemMixin extends Item {
         List<ModifyBlockPlacedPower> powers = PowerHolderComponent.getPowers(context.getPlayer(), ModifyBlockPlacedPower.class)
                 .stream()
                 .filter(power -> power.itemCondition.test(context.getStack()))
-                .collect(Collectors.toList());
-        List<BlockState> blockStates = powers.stream()
-                .flatMap(power -> power.getBlockStates().stream())
-                .collect(Collectors.toList());
-        if (powers.isEmpty() || blockStates.isEmpty()) return;
+                .toList();
+        List<Pair<ModifyBlockPlacedPower, BlockState>> pairs = new ArrayList<>();
+        for (ModifyBlockPlacedPower modifyBlockPlacedPower : powers) {
+            modifyBlockPlacedPower.getBlockStates().forEach(blockState -> {
+                pairs.add(new Pair<>(modifyBlockPlacedPower, blockState));
+            });
+        }
 
-        int random = new Random(powers.get(0).getSeed()).nextInt(blockStates.size());
-        BlockState blockState = blockStates.get(random);
+        if (powers.isEmpty() || pairs.isEmpty()) return;
+
+        int random = new Random(powers.get(0).getSeed()).nextInt(pairs.size());
+        BlockState blockState = pairs.get(random).getRight();
+
+        this.pair = pairs.get(random);
 
         powers.get(0).generateSeed();
-        cir.setReturnValue(context.getWorld().setBlockState(context.getBlockPos(), blockState, Block.NOTIFY_ALL | Block.REDRAW_ON_MAIN_THREAD));
+
+        cir.setReturnValue(context.getWorld().setBlockState(context.getBlockPos(), blockState, 11));
     }
 
     @Inject(method = "place(Lnet/minecraft/item/ItemPlacementContext;)Lnet/minecraft/util/ActionResult;", at = @At(value = "INVOKE", target = "Lnet/minecraft/item/ItemPlacementContext;getBlockPos()Lnet/minecraft/util/math/BlockPos;"))
     private void executeActionAfterPlaced(ItemPlacementContext context, CallbackInfoReturnable<ActionResult> cir) {
-        List<ModifyBlockPlacedPower> powers = PowerHolderComponent.getPowers(context.getPlayer(), ModifyBlockPlacedPower.class)
-                .stream()
-                .filter(power -> power.itemCondition.test(context.getStack()))
-                .collect(Collectors.toList());
-        List<BlockState> blockStates = powers.stream()
-                .flatMap(power -> power.getBlockStates().stream())
-                .collect(Collectors.toList());
-        if (powers.isEmpty() || blockStates.isEmpty()) return;
-
-        int random = new Random(powers.get(0).getSeed()).nextInt(blockStates.size());
-        int powerIndex = 0;
-        for (ModifyBlockPlacedPower power : powers) {
-            if (powerIndex < powers.size()) {
-                if (powerIndex == random) {
-                    power.executeAction(Optional.ofNullable(context.getBlockPos()));
-                    break;
-                } else if (powerIndex < power.getBlockStates().size()) {
-                    powerIndex++;
-                }
-            }
-        }
+        if (this.pair == null) return;
+        this.pair.getLeft().executeAction(Optional.ofNullable(context.getBlockPos()));
+        this.pair = null;
     }
 }
